--- a/indexer2/src/main/resources/application.yaml
+++ b/indexer2/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/searcher?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: libowen
+    password: 这是密码
 logging:
   level:
     com.libowen.searcher: debug
