--- a/indexerWeb/src/main/resources/application.yaml
+++ b/indexerWeb/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/searcher?characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
-    password: libowen
+    password: 这是密码
 mybatis:
   mapper-locations: classpath:mapper/search-mapper.xml
 logging:
